mais um teste para ver se a logo aparece no header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>calculador de imc</title>
 </head>
 <body>
-    <header><img src="./imagens/logotype/logo.png" alt="logotipo"></header>
+    <header><img src="imagens/logotype/logo.png" alt="logotipo"></header>
 
     <main>
         <section id="pegarDados">
